--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	</div>
 	<script type="text/javascript" src="js/jquery-2.0.3.js"></script>
 	<script type="text/javascript" src="js/d3.min.js"></script>
+	<script type="text/javascript" src="js/dataTemplate.js"></script>
 	<script type="text/javascript" src="js/data.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 
