--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<div class="contentHolder">
 	<div id="toolbar">
 		<span class="logo">sTIMS 2.0</span>
-		<span class="lineTitle">京沪线 徐州-蚌埠段</span>
+		<span class="lineTitle" id="lineTitle">京沪线 徐州-蚌埠段</span>
 		&nbsp;&nbsp;&nbsp;
 		<span>时间范围：</span>
 		<select id="startTimeSelect">
@@ -95,9 +95,10 @@
 	<script type="text/javascript" src="js/jquery-2.0.3.js"></script>
 	<script type="text/javascript" src="js/jquery.ztree.core-3.5.min.js"></script>
 	<script type="text/javascript" src="js/d3.min.js"></script>
-	<script type="text/javascript" src="js/dataTemplate.js"></script>
+	<script type="text/javascript" src="data/lineDict.js"></script>
+	<!-- <script type="text/javascript" src="js/dataTemplate.js"></script> -->
 	<script type="text/javascript" src="js/spaceStack.js"></script>
-	<script type="text/javascript" src="js/data.js"></script>
+	<!-- <script type="text/javascript" src="js/data.js"></script> -->
 	<script type="text/javascript" src="js/sTMIS.js"></script>
 	<script type="text/javascript" src="js/lineTree.js"></script>
 
